--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,6 +1,9 @@
 $text-color: #000000;
-$bg-color: #ffffff;
+$bg-color: #f3f3f3;
 $sidebar-color: #ff00dd;
+$context-timeline-color: #842c21;
+$b-timeline-color: #0400ff;
+$c-timeline-color: #15ff00;
 
 @font-face {
   font-family: 'InriaSerif-Bold';
