--- a/src/App.scss
+++ b/src/App.scss
@@ -20,20 +20,45 @@
 
 .chapter-content {
   max-width: 1920px;
-  padding: 0 240px;
+  padding: 0 calc(240px + 16px);
 }
 
-.chapter-heading-wrapper {
-  height: 100vh;
+.header-inner {
+  height: 80px;
   width: 100%;
+  padding-bottom: 32px;
+  position: sticky;
+  top: 16px;
+}
+
+.header-outer {
+  height: 100vh;
+  // hack to prevent underlying elements to shine through
+  width: 101%;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: sticky;
+
+  // hack to make transition between full screen heading and sticky header possible
+  top: calc(80px + 16px - 100vh);
+  // hack to make this possible with <Parallax> too
+  z-index: 99;
+  // hack to prevent underlying elements to shine through
+  margin-left: -2px;
+  background-color: $bg-color;
 }
 
 .chapter-heading {
-  position: sticky;
-  top: 20px;
+  font-size: 40px;
+}
+
+.chapter-body-wrapper {
+  padding: 16px 0;
+
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
 }
 
 #root {
