--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,9 +1,9 @@
 $text-color: #000000;
 $bg-color: #f3f3f3;
-$sidebar-color: #ff00dd;
+$sidebar-color: #f894a859;
 $context-timeline-color: #842c21;
-$b-timeline-color: #0400ff;
-$c-timeline-color: #15ff00;
+$b-timeline-color: #002aa2;
+$c-timeline-color: #db8504;
 
 @font-face {
   font-family: 'InriaSerif-Bold';
