WIP: Add landingpage with 3d model

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,12 @@
   margin: auto;
 }
 
+.prison-model {
+  width: 100%;
+  height: 100vh;
+  background-color: aqua;
+}
+
 .header-inner {
   height: 80px;
   width: 100%;
