--- a/src/App.scss
+++ b/src/App.scss
@@ -24,12 +24,6 @@
   margin: auto;
 }
 
-.prison-model {
-  width: 100%;
-  height: 100vh;
-  background-color: aqua;
-}
-
 .header-inner {
   height: 80px;
   width: 100%;
@@ -66,6 +60,24 @@
   display: flex;
   flex-direction: column;
   gap: 80px;
+}
+
+.sidebars {
+  position: sticky;
+  top: 0;
+  height: 100vh;
+}
+
+.prison-model {
+  width: 100%;
+  height: 100vh;
+
+  // hack to remove duplicate scrollbar in webkit browsers
+  div {
+    &::-webkit-scrollbar {
+      width: 0;
+    }
+  }
 }
 
 #root {
