--- a/src/components/SidebarLeft.scss
+++ b/src/components/SidebarLeft.scss
@@ -1,9 +1,9 @@
 @import '../theme';
 
 .sidebarLeft {
-  position: fixed;
+  position: absolute;
   left: 0;
-  bottom: 0;
+  top: 0;
   width: 240px;
   height: 100%;
   background-color: $sidebar-color;
