feat: Add hover over timeline

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
   height: 100%;
   width: 100%;
 
-  font-family: InriaSerif-Regular, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: $primary-fontfamily;
   line-height: 1.5;
   font-weight: 400;
 
