--- a/src/theme.scss
+++ b/src/theme.scss
@@ -5,6 +5,8 @@ $context-timeline-color: #842c21;
 $b-timeline-color: #002aa2;
 $c-timeline-color: #db8504;
 
+$primary-fontfamily: InriaSerif-Regular, system-ui, Avenir, Helvetica, Arial, sans-serif;
+
 @font-face {
   font-family: 'InriaSerif-Bold';
   font-style: normal;
