fix: date in middle of sidebar

--- a/src/components/SidebarRight.scss
+++ b/src/components/SidebarRight.scss
@@ -23,6 +23,7 @@
     font-size: 18px;
     line-height: 36px;
     margin: 5px;
+    padding: 0;
   }
 
   .date:hover {
@@ -31,6 +32,7 @@
   }
 
   .current-date {
+    padding: 0;
     margin: 10px;
     font-size: 32px;
     color: $c-timeline-color;
