feat: Display time and place of the current chapter in the sidebars

--- a/src/components/SidebarLeft.scss
+++ b/src/components/SidebarLeft.scss
@@ -7,4 +7,14 @@
   width: 240px;
   height: 100vh;
   background-color: $sidebar-color;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+}
+
+.place {
+  color: $context-timeline-color;
+  padding: 30px 10px;
+  font-size: 18px;
 }
