--- a/src/components/SidebarRight.scss
+++ b/src/components/SidebarRight.scss
@@ -14,16 +14,20 @@
 }
 
 .timeline {
-  font-family: $primary-fontfamily;
   color: $context-timeline-color;
   padding: 30px 10px;
   flex: 100%;
+  display: flex;
+  flex-direction: column;
 
   .date {
+    display: block;
     font-size: 18px;
     line-height: 36px;
     margin: 5px;
     padding: 0;
+    color: $context-timeline-color;
+    text-decoration: none;
   }
 
   .date:hover {
@@ -32,10 +36,23 @@
   }
 
   .current-date {
+    @extend .date;
     padding: 0;
     margin: 10px;
     font-size: 32px;
     color: $c-timeline-color;
+  }
+
+  .current-date:hover {
+    font-size: 32px;
+  }
+
+  .prev-date {
+    @extend .date;
+  }
+
+  .next-date {
+    @extend .date;
   }
 
   .hidden-date {
