feat: Add StackingCards component

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,6 +4,9 @@ $sidebar-color: #f894a859;
 $context-timeline-color: #842c21;
 $b-timeline-color: #002aa2;
 $c-timeline-color: #db8504;
+$white: #ffffff;
+
+$drop-shadow-s: 5px 5px 5px rgba(0, 0, 0, 0.333);
 
 $primary-fontfamily: InriaSerif-Regular, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
