--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@
 
 .chapter-content {
   max-width: 1920px;
-  padding: 0 calc(240px + 16px);
+  padding: 0 calc(200px + 16px) 0 16px;
   margin: auto;
 }
 
