refactor: First approach of embedd key color (chum or bou) to quotation marks

--- a/src/components/Quotation/Quotation.module.scss
+++ b/src/components/Quotation/Quotation.module.scss
@@ -6,6 +6,14 @@
   justify-content: center;
 }
 
+.bou {
+  color: $c-timeline-color;
+}
+
+.chum {
+  color: $b-timeline-color;
+}
+
 .quotationMark {
   font-family: InriaSerif-Bold;
   font-size: 8em;
