--- a/src/App.scss
+++ b/src/App.scss
@@ -35,7 +35,9 @@
 .header-outer {
   height: 100vh;
   // hack to prevent underlying elements to shine through
-  width: 101%;
+  width: calc(100vw - 200px - 32px);
+  padding-right: 200px;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -66,6 +68,7 @@
   position: sticky;
   top: 0;
   height: 100%;
+  z-index: 100;
 }
 
 .prison-model {
