feat: Improve Modal

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -5,8 +5,10 @@ $context-timeline-color: #842c21;
 $b-timeline-color: #002aa2;
 $c-timeline-color: #db8504;
 $white: #ffffff;
+$highlight-color: rgb(238, 56, 32);
 
-$drop-shadow-s: 5px 5px 5px rgba(0, 0, 0, 0.333);
+$drop-shadow-s: 3px 3px 3px rgba(0, 0, 0, 0.2);
+$drop-shadow-m: 5px 5px 5px rgba(0, 0, 0, 0.333);
 
 $primary-fontfamily: InriaSerif-Regular, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
