--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,66 +1,90 @@
-.info {
-  width: 1em;
-  height: 1em;
-}
-
-.infobutton {
+.infoButton {
   cursor: pointer;
   background-color: inherit;
   border: none;
   display: inline-block;
+  vertical-align: top;
   position: relative;
+
+  .infoIcon {
+    width: 1.4em;
+    height: 1.4em;
+
+    &:hover {
+      color: $highlight-color;
+    }
+  }
 }
 
-.buttonOpen {
-  z-index: 99;
+.closeBtn {
+  background-color: $white;
+  color: $text-color;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+
+  align-self: flex-end;
+
+  .closeIcon {
+    width: 2em;
+    height: 2em;
+
+    &:hover {
+      color: $highlight-color;
+    }
+  }
 }
 
-.outerWrapper {
-  // background-color: purple;
+.openModalWrapper {
   position: relative;
   display: inline-block;
 }
 
-.wrapper {
-  // background-color: aqua;
+.childrenWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bubbleWrapper {
   position: absolute;
-  left: 0;
+  right: 0;
   bottom: 0;
-  z-index: 99;
-  margin-left: -25px;
+  margin-right: -25px;
   padding-bottom: 5px;
 
   display: flex;
   align-items: flex-end;
   justify-content: flex-start;
-  margin-bottom: calc(20px + 1em);
-}
+  margin-bottom: calc(20px + 1em + 8px);
 
-.bubble {
-  position: relative;
-  width: 500px;
-  height: 300px;
-  padding: 0px;
-  background: #ffffff;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  box-shadow: $drop-shadow-s;
-  z-index: 99;
-}
+  .bubble {
+    border-left: 8px solid $context-timeline-color;
+    position: relative;
+    width: 500px;
+    height: 300px;
+    padding: 10px;
+    background: #ffffff;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: $drop-shadow-s;
+    z-index: 101;
+    display: flex;
+    flex-direction: column;
 
-.bubble:after {
-  content: '';
-  position: absolute;
-  border-style: solid;
-  border-width: 15px 15px 0;
-  border-color: #ffffff transparent;
-  display: block;
-  width: 0;
-  z-index: -1;
-  // margin-left: -15px;
-  bottom: -14px;
-  left: 5%;
-  filter: drop-shadow(2px 5px 2px rgba(130, 130, 130, 1));
-  // box-shadow: $drop-shadow-s;
+    &:after {
+      content: '';
+      position: absolute;
+      border-style: solid;
+      border-width: 15px 15px 0;
+      border-color: #ffffff transparent;
+      display: block;
+      width: 0;
+      z-index: -1;
+      bottom: -14px;
+      right: 4%;
+      filter: drop-shadow(2px 5px 2px rgba(0, 0, 0, 0.2));
+    }
+  }
 }
