--- a/src/components/MuteButton/MuteButton.module.scss
+++ b/src/components/MuteButton/MuteButton.module.scss
@@ -3,7 +3,7 @@
   width: 70px;
   height: 70px;
   left: 50px;
-  bottom: 50px;
+  top: 30px;
   z-index: 99999;
   border-radius: 50%;
   border: 0;
