--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -15,10 +15,12 @@
 }
 
 .place {
+  font-family: $secondary-fontfamily;
   margin-top: 30px;
 }
 
 .timeline {
+  font-family: $secondary-fontfamily;
   color: $context-timeline-color;
   padding: 30px 10px;
   flex: 100%;
