feat: add side menu

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -6,7 +6,7 @@
   top: 0;
   width: 200px;
   height: 100vh;
-  background-color: $sidebar-color;
+  //background-color: $sidebar-color;
 
   display: flex;
   flex-direction: column;
