--- a/src/components/MuteButton/MuteButton.module.scss
+++ b/src/components/MuteButton/MuteButton.module.scss
@@ -1,10 +1,10 @@
 .soundButton {
-  position: fixed;
+  // position: fixed;
   width: 70px;
   height: 70px;
   left: 50px;
   top: 30px;
-  z-index: 99999;
+  z-index: 120;
   border-radius: 50%;
   border: 0;
   background: none;
