--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -48,7 +48,6 @@
 
 .bubbleWrapper {
   position: absolute;
-  right: 0;
   bottom: 0;
   margin-right: -25px;
   padding-bottom: 5px;
@@ -57,6 +56,14 @@
   align-items: flex-end;
   justify-content: flex-start;
   margin-bottom: calc(20px + 1em + 8px);
+
+  &.right {
+    left: 0;
+  }
+
+  &.left {
+    right: 0;
+  }
 
   .bubble {
     border-left: 8px solid $context-timeline-color;
@@ -73,18 +80,38 @@
     display: flex;
     flex-direction: column;
 
-    &:after {
-      content: '';
-      position: absolute;
-      border-style: solid;
-      border-width: 15px 15px 0;
-      border-color: #ffffff transparent;
-      display: block;
-      width: 0;
-      z-index: -1;
-      bottom: -14px;
-      right: 4%;
-      filter: drop-shadow(2px 5px 2px rgba(0, 0, 0, 0.2));
+    &.left {
+      &:after {
+        content: '';
+        position: absolute;
+        border-style: solid;
+        border-width: 15px 15px 0;
+        border-color: #ffffff transparent;
+        display: block;
+        width: 0;
+        z-index: -1;
+        bottom: -14px;
+        filter: drop-shadow(2px 5px 2px rgba(0, 0, 0, 0.2));
+
+        right: 4%;
+      }
+    }
+
+    &.right {
+      &:after {
+        content: '';
+        position: absolute;
+        border-style: solid;
+        border-width: 15px 15px 0;
+        border-color: #ffffff transparent;
+        display: block;
+        width: 0;
+        z-index: -1;
+        bottom: -14px;
+        filter: drop-shadow(2px 5px 2px rgba(0, 0, 0, 0.2));
+
+        left: 0;
+      }
     }
   }
 }
