--- a/src/App.scss
+++ b/src/App.scss
@@ -27,13 +27,14 @@
 .header-inner {
   height: 80px;
   width: 100%;
-  padding-bottom: 32px;
   position: sticky;
   top: 0px;
+  padding-top: 15px;
 }
 
 .header-outer {
   height: 100vh;
+
   // hack to prevent underlying elements to shine through
   width: calc(100vw - 200px - 32px);
   padding-right: 200px;
@@ -49,12 +50,20 @@
   z-index: 99;
   // hack to prevent underlying elements to shine through
   margin-left: -2px;
+
   background-color: $bg-color;
+  background: linear-gradient(
+    to bottom,
+    $bg-color 93%,
+    $bg-color-trans50 95%,
+    $bg-color-trans100 100%
+  );
 }
 
 .chapter-heading {
   font-family: $secondary-fontfamily;
   font-size: 40px;
+  margin: 0 0;
 }
 
 .chapter-body-wrapper {
