--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,5 +1,7 @@
 $text-color: #000000;
-$bg-color: #f3f3f3;
+$bg-color: rgb(243, 243, 243);
+$bg-color-trans50: rgb(243, 243, 243, 50);
+$bg-color-trans100: rgb(243, 243, 243, 0);
 $sidebar-color: #f894a859;
 $context-timeline-color: #842c21;
 $b-timeline-color: #002aa2;
