--- a/src/components/Sidebar/Navbar/Navbar.scss
+++ b/src/components/Sidebar/Navbar/Navbar.scss
@@ -107,6 +107,10 @@
         color: $context-timeline-color;
       }
 
+      .both a {
+        color: $context-timeline-color;
+      }
+
       .active {
         font-size: 24px;
       }
