--- a/src/components/Sidebar/Navbar/Navbar.scss
+++ b/src/components/Sidebar/Navbar/Navbar.scss
@@ -23,6 +23,7 @@
 }
 
 .navbar {
+  font-family: 'InriaSerif-Regular';
   font-size: 24px;
   padding: 30px 10px;
 }
@@ -117,6 +118,7 @@
     }
 
     .header-items {
+      font-family: 'InriaSerif-Regular';
       font-size: 12px;
       list-style: none;
       display: flex;
