visual: Increase padding for Disclaimer

--- a/src/components/Disclaimer/Disclaimer.module.scss
+++ b/src/components/Disclaimer/Disclaimer.module.scss
@@ -34,7 +34,7 @@
 
     width: 600px;
     height: 400px;
-    padding: 10px;
+    padding: 10px 30px 10px 30px;
     background: #ffffff;
     border-radius: 8px;
     box-shadow: $drop-shadow-s;
