--- a/src/App.scss
+++ b/src/App.scss
@@ -105,3 +105,75 @@
 img {
   border: 6px solid $white;
 }
+
+.imgContainerWithTape {
+  position: relative;
+  height: fit-content;
+
+  &::before {
+    content: '';
+    background-size: cover;
+    position: absolute !important;
+    width: 200px;
+    height: 50px;
+    top: 0px;
+    left: -60px;
+    transform: rotate(-30deg);
+  }
+
+  &::after {
+    content: '';
+    background-size: cover;
+    position: absolute !important;
+    width: 200px;
+    height: 100px;
+    bottom: 0px;
+    right: -60px;
+    transform: rotate(-25deg);
+  }
+
+  &.tape1 {
+    &::before {
+      background: transparent url('@/assets/img/tape1.png') no-repeat center;
+    }
+    &::after {
+      background: transparent url('@/assets/img/tape1.png') no-repeat center;
+    }
+  }
+
+  &.tape2 {
+    &::before {
+      background: transparent url('@/assets/img/tape2.png') no-repeat center;
+    }
+    &::after {
+      background: transparent url('@/assets/img/tape2.png') no-repeat center;
+    }
+  }
+
+  &.tape3 {
+    &::before {
+      background: transparent url('@/assets/img/tape3.png') no-repeat center;
+    }
+    &::after {
+      background: transparent url('@/assets/img/tape3.png') no-repeat center;
+    }
+  }
+
+  &.tape4 {
+    &::before {
+      background: transparent url('@/assets/img/tape4.png') no-repeat center;
+    }
+    &::after {
+      background: transparent url('@/assets/img/tape4.png') no-repeat center;
+    }
+  }
+
+  &.tape5 {
+    &::before {
+      background: transparent url('@/assets/img/tape5.png') no-repeat center;
+    }
+    &::after {
+      background: transparent url('@/assets/img/tape5.png') no-repeat center;
+    }
+  }
+}
