refactor: All chapter styles excluding 'background' and 'both' chapters

--- a/src/App.scss
+++ b/src/App.scss
@@ -111,6 +111,7 @@ img {
   height: fit-content;
 
   &::before {
+    z-index: 2;
     content: '';
     background-size: cover;
     position: absolute !important;
